--- a/RedisOnDotnet6Demo/Views/Home/Index.cshtml
+++ b/RedisOnDotnet6Demo/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<RedisOnDotnet6Demo.Models.User>
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -9,31 +10,21 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th scope="col">Type</th>
-      <th scope="col">Column heading</th>
-      <th scope="col">Column heading</th>
-      <th scope="col">Column heading</th>
+      <th scope="col">First Name</th>
+      <th scope="col">Last Name</th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th scope="row">Default</th>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-    <tr>
-      <th scope="row">Default</th>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-    <tr>
-      <th scope="row">Default</th>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
+  @foreach (var item in Model)
+  {
+      <tr>
+          <th scope="row">
+              @Html.DisplayFor(modelItem => item.FirstName)
+          </th>
+          <td>@Html.DisplayFor(modelItem => item.LastName)</td>
+      </tr>
+  }
   </tbody>
 </table>
-<a class="btn btn-success" asp-area="" asp-controller="Home" asp-action="Index">Reload</a>
+<a class="btn btn-success" asp-area="" asp-controller="Home" asp-action="Index" asp-route-fromCache="false">Reload</a>
+<a class="btn btn-success" asp-area="" asp-controller="Home" asp-action="Index" asp-route-fromCache="true">Reload from Cache</a>
